k8/deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alok-test-docker-django-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: alok-test-docker-django-deployment

  template:
    metadata:
      labels:
        app: alok-test-docker-django-deployment
    spec:
      containers:
        - name: alok-django-kops
          image: registry.digitalocean.com/alok-django-kops/django-k8s-api:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
