k8/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: poc-django-service
spec:
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8000
  selector:
    app: poc-django-deployment
