k8/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: poc-django-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - poc.f2f.one
    secretName: poc-django
  rules:
  - host: poc.f2f.one
    http:
        paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: poc-django-service
              port:
                number: 80
